fix : container wibth,features spacing, CTA button padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,7 @@ margin: 0 auto 48px;
 
     font-family: "Roboto", sans-serif;
     font-weight: 500;
+    padding: 16px 32px;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
@@ -171,6 +172,7 @@ margin: 0 auto 48px;
 } 
 
 .features-subtitle {
+    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -243,11 +245,7 @@ margin: 0 auto 48px;
     letter-spacing: 0.02em;
     color: #434455;
 }
-.container {
-    width: 1158px;
-    margin:  0 auto;
-    padding: 0 15px;
-}
+
 .portfolio {
     padding: 120px 0;
 }
